--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TU Hmawbi Voting System</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              tech: ['Orbitron', 'sans-serif'],
+              sans: ['Rajdhani', 'sans-serif'],
+            },
+            animation: {
+              blob: "blob 7s infinite",
+              fadeIn: "fadeIn 0.4s ease-out forwards",
+              slideIn: "slideInRight 0.3s ease-out forwards",
+            }
+          }
+        }
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
       // Polyfill process.env to prevent crashes in browser environments
@@ -145,5 +162,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Critical: This script tag is required to load the React application -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
