feat: Configure Supabase with environment variables
This change moves Supabase credentials from hardcoded values to environment variables, improving security and flexibility. It also introduces a new `STUDENT_MAJORS` constant and updates the `Login` and `AdminDashboard` components to use it for filtering available majors. Teacher verification has been enhanced to include a passcode, and mock mode logic has been adjusted to reflect these changes.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
       // Polyfill process.env to prevent crashes in browser environments
-      window.process = { env: { API_KEY: '' } };
+      window.process = { env: { API_KEY: '', SUPABASE_URL: '', SUPABASE_KEY: '' } };
     </script>
     <style>
       body {
