fix(env): Improve environment variable access for build tools
This commit refactors how environment variables are accessed to ensure compatibility with various build tools and environments, including Vite, Create React App, and Node.js.

It introduces helper functions (`getApiKey`, `getEnvVar`) that first attempt to read variables from `import.meta.env` (for Vite), then `process.env` (for Node.js/CRA/Next.js), and finally a browser-side polyfill for `process.env`. This makes the application more robust when deployed in different CI/CD pipelines and development setups.

The `index.html` has also been updated to provide a safer polyfill for `window.process.env`, preventing overwrites and ensuring default empty string values when variables are not found.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
       // Polyfill process.env to prevent crashes in browser environments
-      window.process = { env: { API_KEY: '', SUPABASE_URL: '', SUPABASE_KEY: '' } };
+      // We check if it exists first to avoid overwriting values injected by bundlers
+      window.process = window.process || { env: {} };
+      window.process.env = window.process.env || {};
+      
+      // Initialize defaults only if missing
+      if (typeof window.process.env.API_KEY === 'undefined') window.process.env.API_KEY = '';
+      if (typeof window.process.env.SUPABASE_URL === 'undefined') window.process.env.SUPABASE_URL = '';
+      if (typeof window.process.env.SUPABASE_KEY === 'undefined') window.process.env.SUPABASE_KEY = '';
     </script>
     <style>
       body {
