--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Civil Major Welcome Voting System</title>
+    <title> CEIT Voting System</title>
     <link rel="icon" href="https://hbtu.edu.mm/img/Hmawbi-logo.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
